--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
       </div>
       <div class="box-text">
         <div class="main-text">
-          Improve your front-end</br>skills by building projects
+          Improve your front-end<br>skills by building projects
         </div>
         <div class="information-text">
-          Scan the QR code to visit Frontend</br>Mentor and take your coding
-          skills to</br>the next level
+          Scan the QR code to visit Frontend<br>Mentor and take your coding
+          skills to<br>the next level
         </div>
       </div>
     </div>
